--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
   "type": "module",
   "dependencies": {
+    "axios": "^1.4.0",
+    "cheerio": "^1.0.0-rc.12",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "node-cron": "^3.0.2",
     "puppeteer": "^19.11.1",
     "twilio": "^4.10.0"
   }
