--- a/package.json
+++ b/package.json
@@ -1,15 +1,19 @@
 {
-  "type": "module",
-  "dependencies": {
-    "axios": "^1.4.0",
-    "cheerio": "^1.0.0-rc.12",
-    "dotenv": "^16.0.3",
-    "express": "^4.18.2",
-    "node-cron": "^3.0.2",
-    "puppeteer": "^19.11.1",
-    "twilio": "^4.10.0"
+  "name": "lmkwhenopen",
+  "version": "1.0.0",
+  "description": "## Overview",
+  "main": "./src/bot.js",
+  "scripts": {
+    "dev": "nodemon -L ./src/bot.js"
   },
-  "overrides": {
-    "semver": "^7.5.3"
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "axios": "^1.6.5",
+    "cheerio": "^1.0.0-rc.12",
+    "dotenv": "^16.3.2",
+    "express": "^4.18.2",
+    "node-cron": "^3.0.3",
+    "twilio": "^4.20.1"
   }
 }
